log
Fri 29 Mar 2024 09:41:04 PM UTC: 
 tests:  0|6
total_score: 0/70
217f712
Fri 29 Mar 2024 10:32:41 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:8: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   35 |    list->size=0;
      |        ^~
Compilation failed
e96167b
Fri 29 Mar 2024 10:35:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
413c517
Fri 29 Mar 2024 10:37:59 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:41: error: ‘Node’ has no member named ‘key’
   43 |   if(list->current) return list->current->key;
      |                                         ^~
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b1a9003
Fri 29 Mar 2024 10:38:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7bfb739
Fri 29 Mar 2024 10:40:30 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
c465490
Fri 29 Mar 2024 10:42:11 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
8b77099
